--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-  "name": "login",
-  "version": "0.0.0",
+  "name": "html-escaper",
+  "version": "2.0.2",
+  "description": "fast and safe way to escape and unescape &<>'\" chars",
+  "main": "./cjs/index.js",
+  "unpkg": "min.js",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "npm run cjs && npm run rollup && npm run minify && npm test && npm run size",
+    "cjs": "ascjs esm cjs",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "minify": "uglifyjs index.js --comments=/^!/ --compress --mangle -o min.js",
+    "rollup": "rollup --config rollup.config.js",
+    "size": "cat index.js | wc -c;cat min.js | wc -c;gzip -c min.js | wc -c",
+    "test": "istanbul cover ./test/index.js"
   },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/forms": "^16.2.0",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/platform-server": "^16.2.0",
-    "@angular/router": "^16.2.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+  "module": "./esm/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WebReflection/html-escaper.git"
   },
+  "keywords": [
+    "html",
+    "escape",
+    "encode",
+    "unescape",
+    "decode",
+    "entities"
+  ],
+  "author": "Andrea Giammarchi",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/WebReflection/html-escaper/issues"
+  },
+  "homepage": "https://github.com/WebReflection/html-escaper",
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.7",
-    "@angular/cli": "^16.2.7",
-    "@angular/compiler-cli": "^16.2.0",
-    "@types/jasmine": "~4.3.0",
-    "@types/node": "^16.11.7",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "ascjs": "^3.1.2",
+    "coveralls": "^3.0.11",
+    "istanbul": "^0.4.5",
+    "rollup": "^2.1.0",
+    "uglify-js": "^3.8.0"
   }
 }
